# relational-alg

./: .gitignore  README.md  relational-algebra.cabal  stack.yaml
src/: Csv.hs  Interpreter.hs  Select.hs  Table.hs  TableOps.hs
src/Select/: Expression.hs  Relation.hs
test/: Spec.hs
