name:                relational-algebra
version:             0.1.1.0
license:             AllRightsReserved
author:              chris mckinlay
maintainer:          chris.mckinlay@gmail.com
category:            SQL
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Select
                       Select.Relation
                       Select.Expression
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite relational-algebra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , relational-algebra
                     , bytestring
                     , vector
                     , cassava
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010
